# libtorch-summary

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  linux-build.sh  win-build.bat
cmake/: LibTorchSummaryConfig.cmake
example/: README.md  app.cpp
example/api/: CMakeLists.txt  linux-build.sh  win-build.bat
example/bundle/: CMakeLists.txt  linux-build.sh  win-build.bat
example/model-store/: requirements.txt  save_dcgan.py
include/: libtorch-summary.h
src/: libtorch-summary.cpp
